--- a/pages/subpages/mine/merchant/index.wxml
+++ b/pages/subpages/mine/merchant/index.wxml
@@ -239,22 +239,38 @@
         <image class="check-btn-arrow" src="https://static.tiddler.cn/mp/merchant/arrow.png" />
       </view>
     </view>
-    <view class="tool-list row">
-      <view class="tool-item">
-        <image class="tool-icon" src="https://static.tiddler.cn/mp/merchant/package.png" />
-        <view class="tool-name">待发货</view>
+    <view class="order-list row around">
+      <view class="order-item row">
+        <view class="order-icon-wrap">
+          <image class="order-icon" src="https://static.tiddler.cn/mp/merchant/package.png" />
+          <view class="total-spot" wx:if="{{shopOrderTotal[0] > 0}}" />
+        </view>
+        <view class="order-name">待发货</view>
       </view>
-      <view class="tool-item">
-        <image class="tool-icon" src="https://static.tiddler.cn/mp/merchant/delivery.png" />
-        <view class="tool-name">待收货</view>
+      <view class="order-item row">
+        <view class="order-icon-wrap">
+          <image class="order-icon" src="https://static.tiddler.cn/mp/merchant/delivery.png" />
+          <view class="total-spot" wx:if="{{shopOrderTotal[1] > 0}}" />
+        </view>
+        <view class="order-name">待收货</view>
       </view>
-       <view class="tool-item">
-        <image class="tool-icon" src="https://static.tiddler.cn/mp/merchant/time.png" />
-        <view class="tool-name">待使用</view>
+      <view class="order-item row">
+        <view class="order-icon-wrap">
+          <image class="order-icon" src="https://static.tiddler.cn/mp/merchant/time.png" />
+          <view class="total-spot" wx:if="{{shopOrderTotal[2] > 0}}" />
+        </view>
+        <view class="order-name">待使用</view>
       </view>
-      <view class="tool-item" bindtap="checkAfterSale">
-        <image class="tool-icon" src="https://static.tiddler.cn/mp/merchant/after_sale.png" />
-        <view class="tool-name">售后</view>
+      <view class="order-item row">
+        <image class="order-icon" src="https://static.tiddler.cn/mp/merchant/time.png" />
+        <view class="order-name">已评价</view>
+      </view>
+      <view class="order-item row" bindtap="checkAfterSale">
+        <view class="order-icon-wrap">
+          <image class="order-icon" src="https://static.tiddler.cn/mp/merchant/after_sale.png" />
+          <view class="total-spot" wx:if="{{shopOrderTotal[3] > 0}}" />
+        </view>
+        <view class="order-name">售后</view>
       </view>
     </view>
   </view>
