--- a/pages/subpages/mine/merchant/index.wxss
+++ b/pages/subpages/mine/merchant/index.wxss
@@ -110,6 +110,62 @@
   border: 1px solid #fff;
 }
 
+.order-card {
+  margin-top: 24rpx;
+  background: #fff;
+  border-radius: 32rpx;
+}
+.order-card-title {
+  padding: 32rpx;
+  color: #141925;
+  font-size: 30rpx;
+  font-weight: 500;
+  line-height: 1;
+}
+.check-btn {
+  color: #999;
+  font-size: 24rpx;
+}
+.check-btn-arrow {
+  width: 24rpx;
+  height: 24rpx;
+}
+.order-list {
+  flex-wrap: wrap;
+}
+.order-list.around {
+  flex-wrap: nowrap;
+}
+.order-item {
+  flex-direction: column;
+  margin-bottom: 32rpx;
+  width: 25%;
+  text-align: center;
+}
+.order-icon-wrap {
+  position: relative;
+  width: 50rpx;
+  height: 50rpx;
+}
+.order-icon {
+  width: 50rpx;
+  height: 50rpx;
+}
+.total-spot {
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 12rpx;
+  height: 12rpx;
+  border-radius: 50%;
+  background: #fb301e;
+}
+.order-name {
+  margin-top: 8rpx;
+  color: #333;
+  font-size: 24rpx;
+}
+
 .tool-card {
   margin-top: 24rpx;
   background: #fff;
@@ -137,6 +193,7 @@
   flex-wrap: nowrap;
 }
 .tool-item {
+  flex-direction: column;
   margin-bottom: 32rpx;
   width: 25%;
   text-align: center;
