--- a/pages/subpages/mine/merchant/subpages/goods-order/index.wxss
+++ b/pages/subpages/mine/merchant/subpages/goods-order/index.wxss
@@ -34,29 +34,32 @@
   font-size: 26rpx;
 }
 
+
 .menu-wrap {
   display: flex;
   align-items: center;
+  justify-content: space-between;
+  padding: 0 32rpx;
   width: 100%;
-  height: 40px;
+  height: 44px;
   background: #fff;
   border-top: 1px solid #f5f6f8;
 }
 .menu-item {
-  flex: 1;
-  height: 40px;
+  position: relative;
+  padding: 0 2px;
+  height: 20px;
   color: #666;
   font-size: 14px;
 }
 .menu-item.selected {
   position: relative;
   color: var(--blue-1);
-  font-size: 15px;
   font-weight: bold;
 }
 .menu-item.selected::after {
   position: absolute;
-  bottom: 2px;
+  bottom: -6px;
   left: 50%;
   transform: translateX(-50%);
   width: 15px;
@@ -64,6 +67,15 @@
   content: '';
   border-radius: 1.5px;
   background: var(--blue-1);
+}
+.total-spot {
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 12rpx;
+  height: 12rpx;
+  border-radius: 50%;
+  background: #fb301e;
 }
 
 .content {
