--- a/pages/subpages/mine/merchant/subpages/goods-order/subpages/order-detail/index.wxml
+++ b/pages/subpages/mine/merchant/subpages/goods-order/subpages/order-detail/index.wxml
@@ -48,14 +48,24 @@
     </view>
   </view>
 
-  <view class="card row" wx:if="{{orderInfo.deliveryMode === 2}}" bindtap="navigation">
-    <view class="pickup-address-info">
-      <view class="pickup-address-name">{{orderInfo.pickupAddress.name}}</view>
-      <view class="pickup-address-detail">{{orderInfo.pickupAddress.addressDetail}}</view>
+  <view class="card" wx:if="{{orderInfo.deliveryMode === 2}}" bindtap="navigation">
+    <view class="pickup-address-info row">
+      <view class="pickup-address">
+        <view class="pickup-address-name">{{orderInfo.pickupAddress.name}}</view>
+        <view class="pickup-address-detail">{{orderInfo.pickupAddress.addressDetail}}</view>
+      </view>
+      <view class="navgation-btn row">
+        <view>导航</view>
+        <image class="navgation-btn-arrow" src="/images/arrow.png" />
+      </view>
     </view>
-    <view class="navgation-btn row">
-      <view>导航</view>
-      <image class="navgation-btn-arrow" src="/images/arrow.png" />
+    <view class="list row between">
+      <view class="title">自提时间</view>
+      <text>{{orderInfo.pickupTime}}</text>
+    </view>
+    <view class="list row between">
+      <view class="title">预留手机号</view>
+      <text>{{orderInfo.pickupMobile}}</text>
     </view>
   </view>
 
@@ -65,7 +75,7 @@
       <view class="title">商品总价</view>
       <price-unit price="{{orderInfo.goodsPrice}}" color="#333" fontSize="20rpx" integerFontSize="28rpx" />
     </view>
-    <view class="list row between">
+    <view class="list row between" wx:if="{{orderInfo.deliveryMode === 1}}">
       <view class="title">运费</view>
       <price-unit price="{{orderInfo.freightPrice}}" color="#333" fontSize="20rpx" integerFontSize="28rpx" />
     </view>
@@ -93,10 +103,6 @@
           <text style="color: #333" bindtap="copyOrderSn">复制</text>
         </view>
       </view>
-      <view class="list row between">
-        <view class="title">创建时间：</view>
-        <text>{{TIME.transform(orderInfo.createdAt, 'YYYY-MM-DD hh:mm:ss')}}</text>
-      </view>
       <view class="list row between" wx:if="{{orderInfo.payTime}}">
         <view class="title">付款时间：</view>
         <text>{{TIME.transform(orderInfo.payTime, 'YYYY-MM-DD hh:mm:ss')}}</text>
@@ -108,6 +114,10 @@
       <view class="list row between" wx:if="{{orderInfo.confirmTime}}">
         <view class="title">成交时间：</view>
         <text>{{TIME.transform(orderInfo.confirmTime, 'YYYY-MM-DD hh:mm:ss')}}</text>
+      </view>
+      <view class="list row between">
+        <view class="title">创建时间：</view>
+        <text>{{TIME.transform(orderInfo.createdAt, 'YYYY-MM-DD hh:mm:ss')}}</text>
       </view>
     </view>
   </view>
