--- a/pages/tab-bar-pages/home/index.wxml
+++ b/pages/tab-bar-pages/home/index.wxml
@@ -1,8 +1,8 @@
 <view class="nav-bar {{navBarActive[curMenuIndex] ? 'active': ''}}" style="padding-top: {{statusBarHeight}}px">
   <view class="menu-tabs-wrap">
     <view style="flex: 1">
-      <!-- <image class="sign-in-icon" src="/images/sign_in.png" /> -->
-      <view class="promoter-icon" wx:if="{{promoterInfo}}">
+      <!-- <image class="sign-in-icon" src="https://static.tiddler.cn/mp/sign_in.png" /> -->
+      <view class="promoter-icon" wx:if="{{userInfo.level === 0 && promoterInfo}}">
         <image class="promoter-avatar" src="{{promoterInfo.avatar}}" />
         <image class="promoter-medal" src="https://static.tiddler.cn/mp/promoter/level_{{promoterInfo.level}}/medal.gif" />
       </view>
