--- a/pages/tab-bar-pages/mall/index.wxml
+++ b/pages/tab-bar-pages/mall/index.wxml
@@ -1,6 +1,6 @@
 <view class="nav-bar {{navBarActive ? 'active': ''}}" style="padding-top: {{statusBarHeight}}px">
-  <!-- <image class="sign-in-icon" src="/images/sign_in.png" /> -->
-  <view class="promoter-icon" wx:if="{{promoterInfo}}">
+  <!-- <image class="sign-in-icon" src="https://static.tiddler.cn/mp/sign_in.png" /> -->
+  <view class="promoter-icon" wx:if="{{userInfo.level === 0 && promoterInfo}}">
     <image class="promoter-avatar" src="{{promoterInfo.avatar}}" />
     <image class="promoter-medal" src="https://static.tiddler.cn/mp/promoter/level_{{promoterInfo.level}}/medal.gif" />
   </view>
