--- a/pages/tab-bar-pages/mine/index.wxml
+++ b/pages/tab-bar-pages/mine/index.wxml
@@ -4,7 +4,11 @@
 <view class="nav-bar row" style="padding-top: {{statusBarHeight}}px;">
   <image class="nav-bg" wx:if="{{navBarVisible}}" src="{{userInfo.bg || 'https://static.tiddler.cn/mp/bg.png'}}" />
   <view class="bg-cover" wx:if="{{navBarVisible}}" />
-  <image class="sign-in-icon" wx:if="{{!navBarVisible}}" src="/images/sign_in.png" />
+  <!-- <image class="sign-in-icon" wx:if="{{!navBarVisible}}" src="https://static.tiddler.cn/mp/sign_in.png" /> -->
+  <view class="promoter-icon" wx:if="{{userInfo.level === 0 && promoterInfo}}">
+    <image class="promoter-avatar" src="{{promoterInfo.avatar}}" />
+    <image class="promoter-medal" src="https://static.tiddler.cn/mp/promoter/level_{{promoterInfo.level}}/medal.gif" />
+  </view>
   <view class="mine-avatar-wrap" wx:if="{{navBarVisible}}">
     <image class="mine-avatar" src="{{userInfo.avatar}}" />
     <image class="mine-medal" wx:if="{{userInfo.level}}" src="https://static.tiddler.cn/mp/promoter/level_{{userInfo.level}}/medal.gif" />
