--- a/pages/tab-bar-pages/mine/index.wxss
+++ b/pages/tab-bar-pages/mine/index.wxss
@@ -31,6 +31,28 @@
   height: 29.5px;
 }
 
+.promoter-icon {
+  position: relative;
+  margin-left: 8px;
+  margin-right: 4px;
+  width: 34px;
+  height: 34px;
+  font-size: 0;
+}
+.promoter-avatar {
+  width: 34px;
+  height: 34px;
+  border-radius: 50%;
+  border: 2px solid #fff;
+}
+.promoter-medal {
+  position: absolute;
+  right: -4px;
+  bottom: -1px;
+  width: 20px;
+  height: 20px;
+}
+
 .mine-avatar-wrap {
   position: relative;
   margin-left: 8px;
