--- a/pages/tab-bar-pages/notice/index.wxss
+++ b/pages/tab-bar-pages/notice/index.wxss
@@ -10,21 +10,48 @@
   padding: 0 8px;
   height: 44px;
 }
+
 .sign-in-icon {
   width: 35px;
   height: 29.5px;
 }
+
+.sign-in-icon {
+  margin-right: 12px;
+  width: 35px;
+  height: 29.5px;
+}
+
+.promoter-icon {
+  position: relative;
+  margin-right: 12px;
+  width: 34px;
+  height: 34px;
+  font-size: 0;
+}
+.promoter-avatar {
+  width: 34px;
+  height: 34px;
+  border-radius: 50%;
+  border: 2px solid #fff;
+}
+.promoter-medal {
+  position: absolute;
+  right: -4px;
+  bottom: -1px;
+  width: 20px;
+  height: 20px;
+}
+
 .all-read-btn {
-  margin-left: 12px;
-  padding: 4px 8px;
+  padding: 6px 8px;
   color: #333;
   font-size: 10px;
   background: #eee;
   border-radius: 8px;
 }
+
 .nav-bar-title {
-  margin-right: 108px;
-  flex: 1;
   color: #333;
   font-size: 16px;
   font-weight: 550;
