--- a/pages/subpages/mine/promoter/index.wxss
+++ b/pages/subpages/mine/promoter/index.wxss
@@ -88,6 +88,7 @@
   position: relative;
   width: 680rpx; 
   height: 368rpx;
+  text-shadow: 0 0 1px #999;
   overflow: hidden;
   transform: scale(1);
   transition: transform 0.2s ease;
@@ -147,13 +148,21 @@
 
 .progress-bar-inner {
   position: relative;
-  min-width: 20%;
-  max-width: 50%;
+  min-width: 12%;
+  max-width: 30%;
   height: 16rpx;
-  border-radius: 8rpx 0 0 8rpx;
+}
+.progress-bar-inner:first-child {
+  border-top-left-radius: 8rpx;
+  border-bottom-left-radius: 8rpx;
+}
+.progress-bar-inner:last-child {
+  border-top-right-radius: 8rpx;
+  border-bottom-right-radius: 8rpx;
 }
 .progress-bar-inner.stripe {
-  border-radius: 0 8rpx 8rpx 0;
+  min-width: 22%;
+  max-width: 70%;
 }
 .progress-bar-inner.level-1 {
   background: #7CDFFF;
@@ -244,6 +253,9 @@
 .progress-tips {
   margin-top: 130rpx;
   font-size: 22rpx;
+}
+.progress-tips-content {
+  flex: 1;
 }
 
 .achievement-wrap {
