--- a/pages/subpages/mall/goods/components/spec-popup/index.wxml
+++ b/pages/subpages/mall/goods/components/spec-popup/index.wxml
@@ -39,7 +39,7 @@
           <van-stepper 
             value="{{ count }}" 
             bind:change="countChange" 
-            max="{{(!userInfo.level && goodsInfo.isGift) ? 1 : maxCount}}" 
+            max="{{((!userInfo.promoterInfo || userInfo.promoterInfo.status === 2) && goodsInfo.isGift) ? 1 : maxCount}}" 
             integer
           />
         </view>
@@ -64,7 +64,11 @@
       <button 
         class="cart-btn {{mode === 0 ? 'border' :  ''}} {{btnActive && maxCount > 0 ? 'active' : '' }} " 
         style="margin-right: {{mode === 0 ? '12rpx' :  '0'}};"
-        wx:if="{{(mode === 0 || mode === 1) && goodsInfo.deliveryMode === 1 && ((goodsInfo.isGift && userInfo.level) || !goodsInfo.isGift)}}" 
+        wx:if="{{
+          (mode === 0 || mode === 1) 
+          && goodsInfo.deliveryMode === 1 
+          && (!goodsInfo.isGift || (goodsInfo.isGift && userInfo.promoterInfo && userInfo.promoterInfo.status === 1))
+        }}" 
         bindtap="addCart"
         hover-class="none"
       >
