--- a/pages/subpages/mall/goods/subpages/goods-detail/index.wxml
+++ b/pages/subpages/mall/goods/subpages/goods-detail/index.wxml
@@ -220,7 +220,10 @@
   <view class="btns row" wx:if="{{goodsInfo.status === 1 && goodsInfo.stock}}">
     <button 
       class="add-cart-btn"
-      wx:if="{{goodsInfo.deliveryMode === 1 && ((goodsInfo.isGift && userInfo.level) || !goodsInfo.isGift)}}" 
+      wx:if="{{
+        goodsInfo.deliveryMode === 1 
+        && (!goodsInfo.isGift || (goodsInfo.isGift && userInfo.promoterInfo && userInfo.promoterInfo.status === 1))
+      }}" 
       bindtap="showSpecPopup" 
       data-mode="{{1}}"
     >
