--- a/pages/tab-bar-pages/mall/index.wxml
+++ b/pages/tab-bar-pages/mall/index.wxml
@@ -1,8 +1,8 @@
 <view class="nav-bar {{navBarActive ? 'active': ''}}" style="padding-top: {{statusBarHeight}}px">
   <!-- <image class="sign-in-icon" src="https://static.tiddler.cn/mp/sign_in.png" /> -->
-  <view class="promoter-icon" wx:if="{{userInfo.level === 0 && promoterInfo}}">
-    <image class="promoter-avatar" src="{{promoterInfo.avatar}}" />
-    <image class="promoter-medal" src="https://static.tiddler.cn/mp/promoter/level_{{promoterInfo.level}}/medal.gif" />
+  <view class="promoter-icon" wx:if="{{!userInfo.promoterInfo && superiorInfo}}">
+    <image class="promoter-avatar" src="{{superiorInfo.avatar}}" />
+    <image class="promoter-medal" src="https://static.tiddler.cn/mp/promoter/level_{{superiorInfo.promoterInfo.level}}/medal.gif" />
   </view>
   <view class="search-bar {{navBarActive ? 'active': ''}}" bindtap="search">
     <image class="search-icon" src="https://img.ubo.vip/tiddler/nav-icon/search.png" />
