--- a/pages/subpages/mall/goods/components/spec-popup/index.wxml
+++ b/pages/subpages/mall/goods/components/spec-popup/index.wxml
@@ -64,11 +64,7 @@
       <button 
         class="cart-btn {{mode === 0 ? 'border' :  ''}} {{btnActive && maxCount > 0 ? 'active' : '' }} " 
         style="margin-right: {{mode === 0 ? '12rpx' :  '0'}};"
-        wx:if="{{
-          (mode === 0 || mode === 1) 
-          && goodsInfo.deliveryMode === 1 
-          && (!goodsInfo.isGift || (goodsInfo.isGift && userInfo.promoterInfo && userInfo.promoterInfo.status === 1))
-        }}" 
+        wx:if="{{(mode === 0 || mode === 1) && goodsInfo.deliveryMode === 1 && (!goodsInfo.isGift || (goodsInfo.isGift && userInfo.promoterInfo && userInfo.promoterInfo.status === 1))}}" 
         bindtap="addCart"
         hover-class="none"
       >
