--- a/pages/subpages/mall/scenic/subpages/scenic-detail/index.wxml
+++ b/pages/subpages/mall/scenic/subpages/scenic-detail/index.wxml
@@ -1,6 +1,9 @@
+<import src="index.skeleton.wxml"/>
 <wxs module="TIME" src="/utils/filters/time.wxs" />
 
 <page-meta page-style="{{ noticePopupVisible ? 'overflow: hidden;' : '' }}" />
+
+<template is="skeleton" wx:if="{{loading}}" />
 
 <view class="nav-bar-wrap">
   <view class="nav-bar row" style="padding-top: {{statusBarHeight}}px;">
@@ -12,7 +15,7 @@
       <view class="spot-name">{{scenicInfo.name}}</view>
       <view class="grade-wrap row">
         <van-rate value="{{scenicInfo.score || 0}}" size="8" gutter="0" color="#fa2458" void-icon="star" void-color="#fedbe4" allow-half readonly />
-        <text class="spot-grade">{{scenicInfo.score}}</text>
+        <text class="spot-grade">{{scenicInfo.score || '暂无评分'}}</text>
       </view>
     </view>
   </view>
@@ -40,7 +43,7 @@
 </view>
 
 <view class="banner-wrap">
-  <swiper style="height: 680rpx;" circular bindchange="bannerChange">
+  <swiper style="height: 580rpx;" wx:if="{{!loading}}" circular bindchange="bannerChange">
     <swiper-item 
       wx:if="{{scenicInfo.video}}"
       bindtap="previewMedia" 
@@ -78,7 +81,7 @@
   </view>
 </view>
 
-<view class="container">
+<view class="container"  wx:if="{{!loading}}">
   <view class="row between">
     <view class="row">
       <view class="scenic-name">{{scenicInfo.name}}</view>
@@ -175,26 +178,25 @@
     />
   </view>
 
-  <view class="content-title-wrap">
+  <view class="content-title-wrap" wx:if="{{scenicInfo.evaluationSummary.total}}">
     <view class="content-title">用户点评</view>
   </view>
-  <view class="evaluation-summary" wx:if="{{evaluationSummary.total}}" bindtap="checkEvaluation">
+  <view class="evaluation-summary" wx:if="{{scenicInfo.evaluationSummary.total}}" bindtap="checkEvaluation">
     <view class="evaluation-list">
-      <evaluation-item wx:for="{{evaluationSummary.list}}" wx:key="index" item="{{item}}" contentOmit/>
+      <evaluation-item wx:for="{{scenicInfo.evaluationSummary.list}}" wx:key="index" item="{{item}}" contentOmit/>
     </view>
     <view class="total-tips row center">
-      <text>共{{evaluationSummary.total}}条点评</text>
+      <text>共{{scenicInfo.evaluationSummary.total}}条点评</text>
       <image class="more-icon" src="./images/more.png" />
     </view>
   </view>
-  <empty-illus wx:if="{{!evaluationSummary.total}}" desc="暂无点评" height="520rpx" />
 
   <view class="content-title-wrap">
     <view class="content-title">热门问答</view>
   </view>
-  <view class="qa-list-wrap" bindtap="checkQa" wx:if="{{qaSummary.total}}">
+  <view class="qa-list-wrap" bindtap="checkQa" wx:if="{{scenicInfo.qaSummary.total}}">
     <view class="qa-list">
-      <view class="qa-item" wx:for="{{qaSummary.list}}" wx:key="index">
+      <view class="qa-item" wx:for="{{scenicInfo.qaSummary.list}}" wx:key="index">
         <view class="qa-label">问</view>
         <view class="qa-question">{{ item.content }}</view>
         <view class="first-answer" wx:if="{{index === 0 && item.firstAnswer}}">
@@ -214,41 +216,39 @@
       </view>
     </view>
     <view class="total-tips row center">
-      <text>共{{qaSummary.total}}条问答</text>
+      <text>共{{scenicInfo.qaSummary.total}}条问答</text>
       <image class="more-icon" src="./images/more.png" />
     </view>
   </view>
   <empty-illus 
-    wx:if="{{!qaSummary.total}}" 
+    wx:if="{{!scenicInfo.qaSummary.total}}" 
     desc="暂无问答"
     height="520rpx"
   >
     <view class="qa-btn row center" bindtap="checkQa">去提问</view>
   </empty-illus>
 
-  <view class="content-title-wrap row between">
+  <view class="content-title-wrap row between" wx:if="{{scenicInfo.nearbyHotelSummary.list.length}}">
     <view class="content-title">附近酒店</view>
-    <view class="row" wx:if="{{nearbyHotelTotal > 10}}">
-      <view class="more-detail">共{{nearbyHotelTotal}}个推荐</view>
+    <view class="row" wx:if="{{scenicInfo.nearbyHotelSummary.total > 10}}">
+      <view class="more-detail">共{{scenicInfo.nearbyHotelSummary.total}}个推荐</view>
       <image class="more-icon" src="./images/more.png" />
     </view>
   </view>
-  <scroll-view class="hotel-list" scroll-x enable-flex wx:if="{{nearbyHotelList.length}}">
-    <hotel-item wx:for="{{nearbyHotelList}}" wx:key="index" info="{{item}}" />
+  <scroll-view class="hotel-list" scroll-x enable-flex wx:if="{{scenicInfo.nearbyHotelSummary.list.length}}">
+    <hotel-item wx:for="{{scenicInfo.nearbyHotelSummary.list}}" wx:key="index" info="{{item}}" />
   </scroll-view>
-  <empty-illus wx:if="{{!nearbyHotelList.length}}" desc="暂无附近酒店" height="520rpx" />
 
-  <view class="content-title-wrap row between">
+  <view class="content-title-wrap row between" wx:if="{{scenicInfo.nearbyScenicSummary.list.length}}">
     <view class="content-title">附近景点</view>
-    <view class="row" wx:if="{{nearbyScenicTotal > 10}}">
-      <view class="more-detail">共{{nearbyScenicTotal}}个推荐</view>
+    <view class="row" wx:if="{{scenicInfo.nearbyScenicSummary.total > 10}}">
+      <view class="more-detail">共{{scenicInfo.nearbyScenicSummary.total}}个推荐</view>
       <image class="more-icon" src="./images/more.png" />
     </view>
   </view>
-  <scroll-view class="scenic-list" scroll-x enable-flex wx:if="{{nearbyScenicList.length}}">
-    <scenic-item wx:for="{{nearbyScenicList}}" wx:key="index" info="{{item}}" />
+  <scroll-view class="scenic-list" scroll-x enable-flex wx:if="{{scenicInfo.nearbyScenicSummary.list.length}}">
+    <scenic-item wx:for="{{scenicInfo.nearbyScenicSummary.list}}" wx:key="index" info="{{item}}" />
   </scroll-view>
-  <empty-illus wx:if="{{!nearbyScenicList.length}}" desc="暂无附近景点" height="520rpx" />
 
   <view class="content-title-wrap">
     <view class="content-title">达人打卡</view>
