--- a/pages/subpages/mall/scenic/subpages/scenic-detail/index.wxss
+++ b/pages/subpages/mall/scenic/subpages/scenic-detail/index.wxss
@@ -1,3 +1,5 @@
+@import "./index.skeleton.wxss";
+
 .nav-bar-wrap {
   position: fixed;
   top: 0;
@@ -154,7 +156,7 @@
 .container {
   position: absolute;
   left: 0;
-  top: 660rpx;
+  top: 560rpx;
   padding: 20rpx;
   padding-bottom: calc(20rpx + env(safe-area-inset-bottom));
   width: 100%;
