--- a/pages/tab-bar-pages/home/index.wxml
+++ b/pages/tab-bar-pages/home/index.wxml
@@ -94,12 +94,13 @@
           </view>
         </view>
         <top-media />
-        <fall-flow class="fall-flow" list="{{mediaList}}" generic:item="media-item" />
-        <view class="loading row center" wx:if="{{mediaList.length && isLoading}}">
-          <image class="loading-icon" src="https://static.tiddler.cn/mp/loading.gif" />
-          <text>加载中...</text>
-        </view>
-        <view class="no-more-tips" wx:if="{{!isLoading && finished && mediaList.length}}">～没有更多啦～</view>
+        <fall-flow 
+          class="fall-flow" 
+          list="{{mediaList}}" 
+          loading="{{isLoading}}"
+          finished="{{finished}}"
+          generic:item="media-item" 
+        />
         <empty-illus wx:if="{{finished && !mediaList.length}}" desc="暂无游记" />
       </view>
     </scroll-view>
