--- a/components/fall-flow/index.wxss
+++ b/components/fall-flow/index.wxss
@@ -1,5 +1,31 @@
-.fall-flow-wrap {
+.row {
+  display: flex;
+  align-items: center;
+}
+.row.center {
+  justify-content: center;
+}
+
+.fall-flow {
   display: flex;
   align-items: flex-start;
   justify-content: space-between;
 }
+
+.loading {
+  padding: 16rpx 0 24rpx;
+  color: #999;
+  font-size: 24rpx;
+}
+.loading-icon {
+  width: 48rpx;
+  height: 48rpx;
+}
+
+.no-more-tips {
+  padding: 16rpx 0 24rpx;
+  color: #999;
+  font-size: 24rpx;
+  text-align: center;
+}
+
