feat: 封装瀑布流

--- a/pages/tab-bar-pages/home/index.wxml
+++ b/pages/tab-bar-pages/home/index.wxml
@@ -42,6 +42,11 @@
     >
       <view class="content">
         <follow-media-item wx:for="{{followMediaList}}" wx:key="index" item="{{item}}" />
+        <view class="loading row center" wx:if="{{followMediaList.length && followLoading}}">
+          <image class="loading-icon" src="https://static.tiddler.cn/mp/loading.gif" />
+          <text>加载中...</text>
+        </view>
+        <view class="no-more-tips" wx:if="{{followFinished && followMediaList.length}}">～没有更多啦～</view>
         <empty-illus 
           wx:if="{{!userInfo || (followFinished && !followMediaList.length)}}" 
           desc="{{userInfo ? '暂无关注列表' : '您还未登录'}}" 
@@ -49,7 +54,6 @@
         >
           <view class="login-btn row center" wx:if="{{!userInfo}}" bindtap="register">点击登录</view>
         </empty-illus>
-        <view class="no-more-tips" wx:if="{{followFinished && followMediaList.length}}">～没有更多啦～</view>
       </view>
     </scroll-view>
   </swiper-item>
