--- a/pages/tab-bar-pages/home/index.wxss
+++ b/pages/tab-bar-pages/home/index.wxss
@@ -143,3 +143,21 @@
   background: var(--blue-1);
   border-radius: 28rpx;
 }
+
+.loading {
+  padding: 16rpx 0 24rpx;
+  color: #999;
+  font-size: 24rpx;
+}
+.loading-icon {
+  width: 48rpx;
+  height: 48rpx;
+}
+
+.no-more-tips {
+  padding: 16rpx 0 24rpx;
+  color: #999;
+  font-size: 24rpx;
+  text-align: center;
+}
+
